src/test/resources/invalid_tests/IllegalName.cnna
architecture IllegalName(inputs=10, classes=2, Tg = 1){
    def input Q(-oo:+oo)^{inputs} in
    def output Q(0:1)^{classes} out

    def Fc(){
        FullyConnected(units=10)
    }

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}